--- a/experiments/deprecated/exp_bin_entr_w.yaml
+++ b/experiments/deprecated/exp_bin_entr_w.yaml
@@ -13,7 +13,7 @@ DATA:
 KNN:
   K: [3, 5, 9]
 EXPERIMENT:
-  FUNCTION_TYPE: 'entr_r'
+  FUNCTION_TYPE: 'entr_w'
   FUNCTION_NAME: [
     'hinge_loss', 
     'sq_hinge_loss', 
@@ -23,13 +23,14 @@ EXPERIMENT:
   ]
   LEARNING_RATE: [0.001, 0.05, 0.01]
   LAYERS: [
-    [200, 2],
-    [200, 200, 2],
-    [200, 200, 200, 2],
-    [200, 200, 200, 200, 2],
-    [200, 200, 200, 200, 200, 2]
+    [200],
+    [200, 200],
+    [200, 200, 200],
+    [200, 200, 200, 200],
+    [200, 200, 200, 200, 200]
   ]
   HIDDEN_ACTIVATIONS: 'relu'
   OUTPUT_ACTIVATIONS: ['sigmoid', 'tanh']
   EPOCHS: 2048
   EARLY_STOPPING: 64
+  EVAL: null
